--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Note that the type="module" is crucial for ES6 modules to work -->
+    <!-- Only include the main module which will import other modules -->
     <script type="module" src="js/main.js"></script>
 </head>
 <body>
@@ -22,8 +22,25 @@
     <div class="game-controls">
         <button id="color-settings-btn">Color Settings</button>
         <button id="player-names-btn">Player Names</button>
+        <button id="reset-scores-btn">Reset Scores</button>
     </div>
     
+    <div class="score-display" id="score-display">
+        <div id="x-score" class="score-item x-score">
+            <span class="player-symbol x">X</span>
+            <span class="player-name">Player X</span>
+            <span class="score-value">0</span>
+        </div>
+        <div id="draw-score" class="score-item draw-score">
+            <span class="draw-label">Draws</span>
+            <span class="score-value">0</span>
+        </div>
+        <div id="o-score" class="score-item o-score">
+            <span class="player-symbol o">O</span>
+            <span class="player-name">Player O</span>
+            <span class="score-value">0</span>
+        </div>
+    </div>
     <div class="status" id="status">Player X's turn</div>
     <div class="board" id="board">
         <div class="cell" data-index="0"></div>
